# cmake_subject

./: CMakeLists.txt
apple/: CMakeLists.txt
apple/include/: apple.h
apple/src/: apple.cpp
fruit/: CMakeLists.txt
fruit/include/: fruit.h
fruit/src/: fruit.cpp
xiaohong/: CMakeLists.txt  main.cpp
